--- a/Author_/Author_ViewController.xib
+++ b/Author_/Author_ViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Author_ViewController" customModule="HearThis" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Author_ViewController" customModule="MeBook" customModuleProvider="target">
             <connections>
                 <outlet property="arrow" destination="x9y-EI-cWG" id="FIf-Rn-E4J"/>
                 <outlet property="collectionFilter" destination="4zJ-jQ-ErX" id="BXQ-AQ-ZfD"/>
@@ -36,8 +37,8 @@
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="1uk-ih-9DT"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tác giả" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
-                            <rect key="frame" x="176.5" y="22" width="61.5" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Các tác giả" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
+                            <rect key="frame" x="159" y="22" width="96.5" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="3QV-z4-mrO"/>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="zOZ-Cz-Rfs"/>
@@ -47,7 +48,8 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <viewLayoutGuide key="safeArea" id="uB8-3x-Sb7"/>
+                    <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="q2e-by-0OV" firstAttribute="leading" secondItem="uB8-3x-Sb7" secondAttribute="leading" constant="8" id="IMk-XR-ogO"/>
                         <constraint firstItem="nQd-hY-D9d" firstAttribute="centerX" secondItem="dS3-9e-pDR" secondAttribute="centerX" id="WLB-M8-22v"/>
@@ -55,7 +57,6 @@
                         <constraint firstAttribute="height" constant="64" id="avo-PJ-2fW"/>
                         <constraint firstItem="nQd-hY-D9d" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="22" id="iyr-qO-qhM"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="uB8-3x-Sb7"/>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="135-H4-Ces">
                     <rect key="frame" x="10" y="167" width="394" height="685"/>
@@ -78,7 +79,7 @@
                         <constraint firstAttribute="height" constant="43" id="Qsh-Sm-ltT"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXG-9B-Wd7">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXG-9B-Wd7">
                     <rect key="frame" x="10" y="116" width="394" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="Ljy-eT-tVw"/>
@@ -93,7 +94,7 @@
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4zJ-jQ-ErX">
                     <rect key="frame" x="10" y="167" width="394" height="685"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Pcg-mL-fpd">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -106,6 +107,7 @@
                     </connections>
                 </collectionView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="3gi-XW-zV5"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="x9y-EI-cWG" firstAttribute="top" secondItem="dS3-9e-pDR" secondAttribute="bottom" constant="8" id="4rL-zr-GoO"/>
@@ -125,12 +127,14 @@
                 <constraint firstItem="3gi-XW-zV5" firstAttribute="trailing" secondItem="4zJ-jQ-ErX" secondAttribute="trailing" constant="10" id="u6J-dt-WMD"/>
                 <constraint firstItem="3gi-XW-zV5" firstAttribute="bottom" secondItem="135-H4-Ces" secondAttribute="bottom" constant="10" id="u7A-gV-KNo"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="3gi-XW-zV5"/>
             <point key="canvasLocation" x="139.13043478260872" y="144.64285714285714"/>
         </view>
     </objects>
     <resources>
         <image name="ic_menu_down" width="33" height="33"/>
         <image name="icon_back" width="33" height="33"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
