--- a/Detail_/TG_Map_Cell.xib
+++ b/Detail_/TG_Map_Cell.xib
@@ -47,8 +47,8 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="32" id="BFY-CT-KFM"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="13" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="onA-w3-bM5">
@@ -57,12 +57,15 @@
                             <constraint firstAttribute="height" constant="22" id="mjz-Ag-eb3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.46666666666666667" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="player" translatesAutoresizingMaskIntoConstraints="NO" id="7sD-4b-Mh2">
-                        <rect key="frame" x="61" y="53" width="38" height="38"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_audio" translatesAutoresizingMaskIntoConstraints="NO" id="7sD-4b-Mh2">
+                        <rect key="frame" x="123" y="107" width="26" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="26" id="sIQ-qy-EC7"/>
+                            <constraint firstAttribute="height" constant="26" id="uhd-Gh-M8B"/>
+                        </constraints>
                     </imageView>
                 </subviews>
             </view>
@@ -77,6 +80,8 @@
                 <constraint firstItem="YMd-pE-Gfq" firstAttribute="top" secondItem="wX3-7p-UCN" secondAttribute="top" constant="4" id="Kzv-Z4-aY9"/>
                 <constraint firstItem="uXI-g6-buO" firstAttribute="top" secondItem="wX3-7p-UCN" secondAttribute="top" constant="4" id="PCs-Bs-6Tn"/>
                 <constraint firstItem="uXI-g6-buO" firstAttribute="leading" secondItem="wX3-7p-UCN" secondAttribute="leading" constant="10" id="THd-RL-TXf"/>
+                <constraint firstAttribute="trailing" secondItem="7sD-4b-Mh2" secondAttribute="trailing" constant="11" id="W4c-47-164"/>
+                <constraint firstItem="4z1-A9-f4q" firstAttribute="top" secondItem="7sD-4b-Mh2" secondAttribute="bottom" constant="8" id="ZVL-2E-PST"/>
                 <constraint firstAttribute="trailing" secondItem="uXI-g6-buO" secondAttribute="trailing" constant="10" id="e64-m0-PNq"/>
                 <constraint firstAttribute="trailing" secondItem="onA-w3-bM5" secondAttribute="trailing" constant="5" id="eMo-95-1iR"/>
                 <constraint firstAttribute="trailing" secondItem="YMd-pE-Gfq" secondAttribute="trailing" constant="10" id="iws-dl-Qh0"/>
@@ -90,7 +95,7 @@
     </objects>
     <resources>
         <image name="book_cover" width="270" height="135"/>
-        <image name="player" width="33" height="33"/>
+        <image name="ico_audio" width="33" height="33"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
