--- a/Tabbar_/Book_List_Cell.xib
+++ b/Tabbar_/Book_List_Cell.xib
@@ -1,117 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Book_List_Cell" rowHeight="165" id="9LW-Yt-3Nr">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Book_List_Cell" rowHeight="150" id="9LW-Yt-3Nr">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9LW-Yt-3Nr" id="eKm-44-0I4">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WAf-UP-r62">
-                        <rect key="frame" x="7" y="7" width="86" height="124"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3e-Rb-1Cr">
+                        <rect key="frame" x="20" y="7" width="90" height="130"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="86" id="3pf-Gd-oSZ"/>
-                            <constraint firstAttribute="height" constant="124" id="7gY-91-4fK"/>
+                            <constraint firstAttribute="width" constant="90" id="3Cd-i2-4Dd"/>
+                            <constraint firstAttribute="height" constant="130" id="BKF-bQ-gfy"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="point" keyPath="shadowOffset">
+                                <point key="value" x="0.5" y="0.0"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.59999999999999998"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WAf-UP-r62">
+                        <rect key="frame" x="20" y="7" width="90" height="130"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="90" id="3pf-Gd-oSZ"/>
+                            <constraint firstAttribute="height" constant="130" id="7gY-91-4fK"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdH-1U-Xij">
-                        <rect key="frame" x="101" y="7" width="208" height="21"/>
+                        <rect key="frame" x="122" y="7" width="187" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="G7X-7y-Xsf"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.1137254902" green="0.32156862749999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0W-HG-Mtd">
-                        <rect key="frame" x="101" y="32" width="208" height="21"/>
+                        <rect key="frame" x="122" y="32" width="187" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="pOl-Oj-psm"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pbg-mN-naX">
-                        <rect key="frame" x="101" y="57" width="208" height="21"/>
+                        <rect key="frame" x="122" y="57" width="187" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Rxx-zq-z6X"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjq-ps-R5d">
-                        <rect key="frame" x="101" y="82" width="208" height="21"/>
+                        <rect key="frame" x="122" y="82" width="187" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="yy6-TP-o01"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.46666666670000001" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMt-HR-aKu">
-                        <rect key="frame" x="7" y="137" width="51" height="21"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_corner_top" translatesAutoresizingMaskIntoConstraints="NO" id="s7P-cd-GVj">
+                        <rect key="frame" x="20" y="7" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="51" id="9RF-12-jNZ"/>
-                            <constraint firstAttribute="height" constant="21" id="vvl-D9-OCH"/>
+                            <constraint firstAttribute="height" constant="25" id="Stw-9z-G5W"/>
+                            <constraint firstAttribute="width" constant="25" id="hyz-gu-ao4"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T8C-V1-SZZ">
+                        <rect key="frame" x="20" y="7" width="25" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="76S-sV-deS"/>
+                            <constraint firstAttribute="height" constant="24" id="ppg-Nx-vOO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đọc &gt;" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bNw-x4-lag">
-                        <rect key="frame" x="263" y="137" width="46" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="43" id="prX-Ti-Jth"/>
-                            <constraint firstAttribute="height" constant="21" id="uDk-eq-JIk"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tpz-KF-QTG">
-                        <rect key="frame" x="7" y="164.5" width="313" height="0.5"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="0.5" id="DRs-5E-Hgh"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Tpz-KF-QTG" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="3xR-OB-KUl"/>
-                    <constraint firstItem="eMt-HR-aKu" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="8Nm-uz-Vv6"/>
+                    <constraint firstItem="s7P-cd-GVj" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="7G6-ww-ghv"/>
                     <constraint firstItem="fdH-1U-Xij" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="8c3-dw-4su"/>
-                    <constraint firstItem="K0W-HG-Mtd" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="CUO-X3-bko"/>
-                    <constraint firstItem="Tjq-ps-R5d" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="KpV-aC-nqt"/>
+                    <constraint firstItem="K0W-HG-Mtd" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="CUO-X3-bko"/>
+                    <constraint firstItem="Tjq-ps-R5d" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="KpV-aC-nqt"/>
                     <constraint firstItem="Pbg-mN-naX" firstAttribute="top" secondItem="K0W-HG-Mtd" secondAttribute="bottom" constant="4" id="OBo-Lv-H3D"/>
                     <constraint firstAttribute="trailing" secondItem="Pbg-mN-naX" secondAttribute="trailing" constant="11" id="U1j-u7-fOC"/>
                     <constraint firstAttribute="trailing" secondItem="fdH-1U-Xij" secondAttribute="trailing" constant="11" id="U6O-OP-PE0"/>
-                    <constraint firstItem="WAf-UP-r62" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="bPV-mJ-iEE"/>
+                    <constraint firstItem="WAf-UP-r62" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="bPV-mJ-iEE"/>
                     <constraint firstAttribute="trailing" secondItem="Tjq-ps-R5d" secondAttribute="trailing" constant="11" id="c2l-oH-78k"/>
                     <constraint firstAttribute="trailing" secondItem="K0W-HG-Mtd" secondAttribute="trailing" constant="11" id="ccm-ar-3XD"/>
-                    <constraint firstAttribute="bottom" secondItem="Tpz-KF-QTG" secondAttribute="bottom" id="g40-q8-3o8"/>
-                    <constraint firstAttribute="trailing" secondItem="Tpz-KF-QTG" secondAttribute="trailing" id="gYr-T4-dID"/>
-                    <constraint firstItem="Pbg-mN-naX" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="k6D-TT-qfP"/>
+                    <constraint firstItem="T8C-V1-SZZ" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="j5u-Ss-0IJ"/>
+                    <constraint firstItem="s7P-cd-GVj" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="jgQ-S8-ifM"/>
+                    <constraint firstItem="Pbg-mN-naX" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="k6D-TT-qfP"/>
                     <constraint firstItem="K0W-HG-Mtd" firstAttribute="top" secondItem="fdH-1U-Xij" secondAttribute="bottom" constant="4" id="lAG-mM-9YP"/>
-                    <constraint firstAttribute="trailing" secondItem="bNw-x4-lag" secondAttribute="trailing" constant="11" id="mWh-5O-wI9"/>
-                    <constraint firstAttribute="bottom" secondItem="eMt-HR-aKu" secondAttribute="bottom" constant="7" id="oU6-cO-cA6"/>
+                    <constraint firstItem="W3e-Rb-1Cr" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="qrS-BE-tsA"/>
                     <constraint firstItem="Tjq-ps-R5d" firstAttribute="top" secondItem="Pbg-mN-naX" secondAttribute="bottom" constant="4" id="uBt-BN-sB1"/>
+                    <constraint firstItem="W3e-Rb-1Cr" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="vSN-I5-fcV"/>
                     <constraint firstItem="WAf-UP-r62" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="wiC-NB-hGl"/>
-                    <constraint firstAttribute="bottom" secondItem="bNw-x4-lag" secondAttribute="bottom" constant="7" id="yYB-mx-JVk"/>
-                    <constraint firstItem="fdH-1U-Xij" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="yt6-qS-lBz"/>
+                    <constraint firstItem="fdH-1U-Xij" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="yt6-qS-lBz"/>
+                    <constraint firstItem="T8C-V1-SZZ" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="zyX-BR-y4o"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-73.913043478260875" y="29.799107142857142"/>
+            <point key="canvasLocation" x="-73.913043478260875" y="24.776785714285712"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ico_corner_top" width="29.5" height="29.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
