--- a/Tabbar_/TG_Room_Cell_0.xib
+++ b/Tabbar_/TG_Room_Cell_0.xib
@@ -41,7 +41,7 @@
                             <outlet property="delegate" destination="A2j-Pn-1Qw" id="mTC-6L-Xtm"/>
                         </connections>
                     </collectionView>
-                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szO-ZB-roc">
+                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szO-ZB-roc">
                         <rect key="frame" x="224" y="0.0" width="88" height="37"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="Oib-4X-jPY"/>
