--- a/EM_Menu.xib
+++ b/EM_Menu.xib
@@ -444,7 +444,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DTo-bb-ITH">
+                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DTo-bb-ITH">
                     <rect key="frame" x="47.5" y="277.5" width="280" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="ExT-G2-Yvb"/>
@@ -454,7 +454,7 @@
                     <color key="textColor" red="0.14117647059999999" green="0.4039215686" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFN-hn-FWR">
+                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFN-hn-FWR">
                     <rect key="frame" x="27.5" y="323.5" width="320" height="20.5"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20.5" id="DT4-Og-MSd"/>
@@ -619,6 +619,87 @@
             </constraints>
             <point key="canvasLocation" x="-1050.4000000000001" y="-61.619190404797607"/>
         </view>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="zp0-84-Aal">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view clipsSubviews="YES" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L8M-1n-lcB">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47I-5X-Xxz">
+                    <rect key="frame" x="177.5" y="379" width="20" height="126"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="126" id="orQ-zV-Uqi"/>
+                        <constraint firstAttribute="width" constant="20" id="ywC-iM-ds6"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qft-ch-R0L">
+                    <rect key="frame" x="102.5" y="415" width="170" height="52"/>
+                    <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="52" id="WVG-BZ-H3z"/>
+                        <constraint firstAttribute="width" constant="170" id="lpt-qf-zDa"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                    <state key="normal" title="MUA GÓI    ">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <integer key="value" value="26"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_vip" translatesAutoresizingMaskIntoConstraints="NO" id="ZZZ-v0-lsR">
+                    <rect key="frame" x="228.5" y="410" width="61" height="61"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="61" id="Vfz-9s-5To"/>
+                        <constraint firstAttribute="height" constant="61" id="mfi-Tv-in6"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Truy cập bị giới hạn !!!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwm-ot-1a8">
+                    <rect key="frame" x="47.5" y="261" width="280" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="Bli-09-yxe"/>
+                        <constraint firstAttribute="width" constant="280" id="g8i-mL-jzQ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quý khách vui lòng đăng ký gói VIP MeBook để tiếp tục trải nghiệm dịch vụ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCv-Ux-XA3">
+                    <rect key="frame" x="-2.5" y="313" width="380" height="41"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20.5" id="Ybu-yQ-G1l"/>
+                        <constraint firstAttribute="width" constant="380" id="nE7-bc-qwM"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="a5K-kO-j7Q"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="cwm-ot-1a8" firstAttribute="centerX" secondItem="zp0-84-Aal" secondAttribute="centerX" id="6l5-DN-hav"/>
+                <constraint firstItem="L8M-1n-lcB" firstAttribute="bottom" secondItem="a5K-kO-j7Q" secondAttribute="bottom" id="7Fs-g3-3RF"/>
+                <constraint firstItem="CCv-Ux-XA3" firstAttribute="top" secondItem="cwm-ot-1a8" secondAttribute="bottom" constant="22" id="7uR-NH-tTk"/>
+                <constraint firstItem="Qft-ch-R0L" firstAttribute="centerX" secondItem="zp0-84-Aal" secondAttribute="centerX" id="AIJ-cQ-2jc"/>
+                <constraint firstItem="L8M-1n-lcB" firstAttribute="trailing" secondItem="a5K-kO-j7Q" secondAttribute="trailing" id="FgR-VG-13N"/>
+                <constraint firstItem="L8M-1n-lcB" firstAttribute="top" secondItem="a5K-kO-j7Q" secondAttribute="top" id="MZV-tF-uu3"/>
+                <constraint firstItem="ZZZ-v0-lsR" firstAttribute="leading" secondItem="47I-5X-Xxz" secondAttribute="trailing" constant="31" id="VfL-T7-EAK"/>
+                <constraint firstItem="ZZZ-v0-lsR" firstAttribute="top" secondItem="CCv-Ux-XA3" secondAttribute="bottom" constant="56" id="gD4-fQ-Zn6"/>
+                <constraint firstItem="47I-5X-Xxz" firstAttribute="top" secondItem="CCv-Ux-XA3" secondAttribute="bottom" constant="25" id="jT6-YI-A0j"/>
+                <constraint firstItem="47I-5X-Xxz" firstAttribute="centerX" secondItem="zp0-84-Aal" secondAttribute="centerX" id="nNw-kB-uQt"/>
+                <constraint firstItem="L8M-1n-lcB" firstAttribute="leading" secondItem="zp0-84-Aal" secondAttribute="leading" id="rkP-cX-JaJ"/>
+                <constraint firstItem="Qft-ch-R0L" firstAttribute="top" secondItem="CCv-Ux-XA3" secondAttribute="bottom" constant="61" id="ujC-Ug-2ec"/>
+                <constraint firstItem="CCv-Ux-XA3" firstAttribute="centerX" secondItem="zp0-84-Aal" secondAttribute="centerX" id="y29-md-UMZ"/>
+                <constraint firstItem="CCv-Ux-XA3" firstAttribute="centerY" secondItem="zp0-84-Aal" secondAttribute="centerY" id="yfb-x1-mJd"/>
+            </constraints>
+            <point key="canvasLocation" x="580" y="-62.518740629685162"/>
+        </view>
     </objects>
     <resources>
         <image name="gradient" width="79.5" height="10.5"/>
@@ -627,6 +708,7 @@
         <image name="ic_gallery" width="49.5" height="32"/>
         <image name="ic_view" width="16" height="16"/>
         <image name="ico_success" width="66.5" height="65.5"/>
+        <image name="ico_vip" width="33" height="33.5"/>
         <image name="xxxx" width="33" height="33"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
